# booru-classifier

./: .env.example  .gitignore  Dockerfile  Dockerfile.scraping  Dockerfile.training  README.md  aws_setup.sh  conda-lock.yml  custom_reader.py  dataset_final_deeplake.py  dataset_final_tensorstore.py  dataset_final_tensorstore_temp.py  dataset_skeleton.py  dc-scraping.yml  dc-training.yml  docker-compose.yml  downloaded_tags.py  environment.yml  model.py  parameters.py  pyproject.toml  reader.py  requirements.txt  scrape_images_async.py  scrape_posts_async.py  scrape_tags_async.py  tensorstore_reader.py  trainer.py  utils.py
data/: parameters.py
params/: parameters.py
scraping/: dataset_final_deeplake.py  dataset_skeleton.py  downloaded_tags.py  pyproject.toml  scrape_images_async.py  scrape_posts_async.py  scrape_tags_async.py
training/: conda-lock.yml  environment.yml  pyproject.toml  reader.py  trainer.py  utils.py
