[tool.poetry]
name = "booru-training"
version = "0.1.0"
description = "Training deep learning models on images from boorus."
authors = ["Your Name <you@example.com>"]
license = "GNU GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
deeplake = "^3.8.0"
einops = "^0.7.0"
jsonargparse = "^4.0"
lightning = "2.2.0"
matplotlib = "^3.0"
transformers = "^4.37.0"
wandb = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
